startページの追加

--- a/html/startpage.html
+++ b/html/startpage.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>start</title>
+    <title>お絵かきアプリ</title>
 </head>
-<body>
-    
+<body class="startpage">
+    <div class="startpage-title">お絵かきアプリ</div>
+    <div class="startpage-start">
+        <div class="startpage-start__name">START</div>
+    </div>
 </body>
 </html>
