--- a/drawingpage.html
+++ b/drawingpage.html
@@ -10,6 +10,13 @@
 </head>
 <body class="drawingpage">
   <div class="drawingpage__title">お絵かきアプリ</div>
+  <div class="drawingpage__pensize">
+    <button id="drawingpage__pensize__pen-ss">極細</button>
+    <button id="drawingpage__pensize__pen-s">細</button>
+    <button id="drawingpage__pensize__pen-m">中</button>
+    <button id="drawingpage__pensize__pen-l">太</button>
+    <button id="drawingpage__pensize__pen-ll">極太</button>
+  </div>
   <div class="drawingpage__board">
     <canvas
       id="drawingpage__board__draw-area"
