--- a/startpage.html
+++ b/startpage.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja">
+<link rel="stylesheet" href="startpage.css">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>お絵かきアプリ</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta property="og:title" content="" />
+    <meta property="og:type" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
+
+    <link rel="stylesheet" href="startpage.css">
 </head>
 <body class="startpage">
     <div class="startpage-title">お絵かきアプリ</div>
