--- a/startpage.html
+++ b/startpage.html
@@ -12,12 +12,17 @@
     <meta property="og:url" content="" />
     <meta property="og:image" content="" />
 
-    <link rel="stylesheet" href="startpage.css">
+    <link rel="stylesheet" href="/css/startpage.css">
 </head>
 <body class="startpage">
+    <div class="startpage-background">
+        <img src="./img/startpage-background-img.png" class="startpage-background__image">
+    </div>
     <div class="startpage-title">お絵かきアプリ</div>
+    <a href="">
     <div class="startpage-start">
         <div class="startpage-start__name">START</div>
     </div>
+    </a>
 </body>
 </html>
