--- a/startpage.html
+++ b/startpage.html
@@ -16,13 +16,16 @@
 </head>
 <body class="startpage">
     <div class="startpage-background">
-        <img src="./img/startpage-background-img.png" class="startpage-background__image">
+        <img src="./img/startpage-background2.jpg" class="startpage-background__image">
     </div>
     <div class="startpage-title">お絵かきアプリ</div>
-    <a href="">
+    <div class="startpage__margin"></div>
+    
     <div class="startpage-start">
-        <div class="startpage-start__name">START</div>
+        <a href="#" class="startpage-start__click">
+        <div class="startpage-start__click__name">START</div>
+        </a>
     </div>
-    </a>
+    
 </body>
 </html>
