--- a/drawingpage.html
+++ b/drawingpage.html
@@ -3,38 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <!-- 色変更に使うライブラリで用意されているCSSを導入 https://github.com/bebraw/colorjoe -->
   <link rel="stylesheet" href="css/drawingpage.css">
   <title>お絵かきアプリ</title>
 </head>
+<div class="drawingpage__title">お絵かきアプリ</div>
+
 <body class="drawingpage">
-  
-  <div class="drawingpage__title">お絵かきアプリ</div>
-  <div class="drawingpage__pensize">
-    <button id="drawingpage__pensize__pen-ss">極細</button>
-    <button id="drawingpage__pensize__pen-s">細</button>
-    <button id="drawingpage__pensize__pen-m">中</button>
-    <button id="drawingpage__pensize__pen-l">太</button>
-    <button id="drawingpage__pensize__pen-ll">極太</button>
-  </div>
-  <div class="drawingpage__board">
-    <canvas
-      id="drawingpage__board__draw-area"
-      width="400px"
-      height="400px"
-      style="border: 1px solid #000000;"></canvas>
-    <!-- 色を選択できるカラーパレットを用意する。 -->
-    <span id="drawingpage__board__color-palette"></span>
-  </div>
-  <div class="drawingpage__pen">
-    <button id="drawingpage__pen__clear-button">全消し</button>
-    <button id="drawingpage__pen__eraser-button">消しゴムモード</button>
-    <button id="drawingpage__pen__color-red">赤</button>
-    <button id="drawingpage__pen__color-blue">青</button>
-    <button id="drawingpage__pen__color-green">緑</button>
-    <button id="drawingpage__pen__color-yellow">黄</button>
-    <button id="drawingpage__pen__color-black">黒</button>
+        <div class="drawingpage__pensize">
+          <button id="drawingpage__pensize__pen-ss">極細</button>
+          <button id="drawingpage__pensize__pen-s">細</button>
+          <button id="drawingpage__pensize__pen-m">中</button>
+          <button id="drawingpage__pensize__pen-l">太</button>
+          <button id="drawingpage__pensize__pen-ll">極太</button>
+        </div>
+        <div class="drawingpage__board">
+          <canvas
+            id="drawingpage__board__draw-area"
+            width="400px"
+            height="400px"
+            style="border: 1px solid #000000;"></canvas>
+          <!-- 色を選択できるカラーパレットを用意する。 -->
+          <span id="drawingpage__board__color-palette"></span>
+        </div>
+        <div class="drawingpage__pen">
+          <button id="drawingpage__pen__clear-button">全消し</button>
+          <button id="drawingpage__pen__eraser-button">消しゴムモード</button>
+          <button id="drawingpage__pen__color-red" class="btn btn-danger"> </button>
+          <button id="drawingpage__pen__color-blue" class="btn btn-primary"> </button>
+          <button id="drawingpage__pen__color-green" class="btn btn-success"> </button>
+          <button id="drawingpage__pen__color-yellow" class="btn btn-warning"> </button>
+          <button id="drawingpage__pen__color-black" class="btn btn-dark"> </button>
+        </div>
   </div>
   <!-- 色変更に使うライブラリを導入 https://github.com/bebraw/colorjoe -->
   <script src="./js/colorjoe.min.js"></script>
