リンクの接続

--- a/startpage.html
+++ b/startpage.html
@@ -22,7 +22,7 @@
     <div class="startpage__margin"></div>
     
     <div class="startpage-start">
-        <a href="#" class="startpage-start__click">
+        <a href="./drawingpage.html" class="startpage-start__click">
         <div class="startpage-start__click__name">START</div>
         </a>
     </div>
