ゲーム終了ボタンを追加

--- a/drawingpage.html
+++ b/drawingpage.html
@@ -42,7 +42,13 @@
           <button id="drawingpage__pen__color-black" class="btn btn-dark"> </button>
           </div>
         </div>
-  </div>
+        
+        <div class="drawingpage__finisharea">
+          <a href="./startpage.html" class="drawingpage__finisharea__click">
+          <div class="drawingpage__finisharea__click__finish">ゲームを終了する</div>
+          </a>
+        </div>
+        
   <!-- 色変更に使うライブラリを導入 https://github.com/bebraw/colorjoe -->
   <script src="./js/colorjoe.min.js"></script>
   <script src="./js/drawingpage.js"></script>
