--- a/startpage.html
+++ b/startpage.html
@@ -21,9 +21,9 @@
     <div class="startpage-title">お絵かきアプリ</div>
     <div class="startpage__margin"></div>
     
-    <div class="startpage-start">
-        <a href="./drawingpage.html" class="startpage-start__click">
-        <div class="startpage-start__click__name">START</div>
+    <div class="startpage-start ">
+        <a href="./drawingpage.html" class="startpage-start__click btn-start">
+        <div class="startpage-start__click__name ">START</div>
         </a>
     </div>
     
