--- a/drawingpage.html
+++ b/drawingpage.html
@@ -30,8 +30,10 @@
         </div>
         <div class="drawingpage__board">
           <canvas
-            id="drawingpage__board__draw-area"
-            
+            id="drawingpage__board__draw-area-id"
+            class="drawingpage__board__draw-area"
+            width= "330px"
+            height= "350px"
             style="border: 1px solid #000000;"></canvas>
           <!-- 色を選択できるカラーパレットを用意する。 -->
           <span id="drawingpage__board__color-palette"></span>
