時間計測のプログラム追加

--- a/drawingpage.html
+++ b/drawingpage.html
@@ -20,6 +20,7 @@
     <img src="./img/drawingpage-background.png" >
   </div>
   <div class="drawingpage__title">お絵かきアプリ</div>
+  <div id="drawingpage__timer-id" class="drawingpage__timer">時間</div>
 
         <div class="drawingpage__pensize">
           <button id="drawingpage__pensize__pen-ss">極細</button>
@@ -62,5 +63,6 @@
   <!-- 色変更に使うライブラリを導入 https://github.com/bebraw/colorjoe -->
   <script src="./js/colorjoe.min.js"></script>
   <script src="./js/drawingpage.js"></script>
+  <script src="./js/timer.js"></script>
 </body>
 </html>
