エフェクトの修正

--- a/startpage.html
+++ b/startpage.html
@@ -18,7 +18,9 @@
     <div class="startpage-background">
         <img src="./img/startpage-background2.jpg" class="startpage-background__image">
     </div>
-    <div class="startpage-title">お絵かきアプリ</div>
+    <div class="startpage-title">
+        お絵かきアプリ
+    </div>
     <div class="startpage__margin"></div>
     
     <div class="startpage-start ">
