--- a/drawingpage.html
+++ b/drawingpage.html
@@ -20,7 +20,7 @@
     <img src="./img/drawingpage-background.png" >
   </div>
   <div class="drawingpage__title">お絵かきアプリ</div>
-  <div id="drawingpage__timer-id" class="drawingpage__timer">時間</div>
+  <div id="drawingpage__timer-id" class="drawingpage__timer"></div>
 
         <div class="drawingpage__pensize">
           <button id="drawingpage__pensize__pen-ss">極細</button>
