--- a/startpage.html
+++ b/startpage.html
@@ -22,8 +22,8 @@
     <div class="startpage__margin"></div>
     
     <div class="startpage-start ">
-        <a href="./drawingpage.html" type="button" class="startpage-start__click btn-start" onclick="startfunction()">
-        <div class="startpage-start__click__name ">START</div>
+        <a href="./drawingpage.html" type="button" class="startpage-start__click btn-start" onclick="cntStart()">
+        <div class="startpage-start__click__name " >START</div>
         </a>
     </div>
     <script src="./js/timer.js"></script>
